Implementing features to respect Robots.txt, added a bunch of notes to keep in mind for later